[project]
name = "jena-helm-sidecar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander Zharinov", email = "alexander.zharinov@hiro-microdatacenters.nl" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jena_helm_sidecar"]
