[project]
name = "jena-helm-sidecar"
version = "0.1.0"
description = "Helm sidecar to extract custom metrics form Apache Jena Fuseki"
authors = [
    { name = "Alexander Zharinov", email = "alexander.zharinov@hiro-microdatacenters.nl" }
]
dependencies = [
    "fastapi[standard]>=0.115.6",
]
readme = "README.md"
requires-python = ">= 3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jena_helm_sidecar"]
